--- a/README
+++ b/README
@@ -1,9 +1,11 @@
-CacheGuard is an Enterprise Grade Web Security Gateway providing firewall, web antivirus, caching, web compression, URL filtering, forward/reverse proxy, web load balancing, WAF, antivirus, bandwidth shaping and more.
+CacheGuard is an Enterprise Grade Network Security & Optimization Gateway providing firewall, VPN, web antivirus, caching, web compression, URL filtering, forward/reverse proxy, web load balancing, WAF, bandwidth shaping and more.
 
-The High Availability function is the the heart of CacheGuard using RAID, link bounding, VRRP, cache sharing. An SNMP agent is integrated into the appliance and the appliance can send traps if something goes wrong.
+The High Availability function is at the heart of CacheGuard using RAID, link bounding, VRRP, cache sharing. An SNMP agent is integrated into the appliance and it can send traps if something goes wrong.
 
-CacheGuard is available as an OS appliance to install on a hardware or virtual machine of your choice. You can implement it transparently in any existing architecture as your main central point where all the Web traffic passes through.
+CacheGuard is available as an OS appliance to install on a hardware or virtual machine of your choice. You can implement it transparently in any existing architecture as your main central point where all the network traffic pass through.
 
-CacheGuard is based on a hardened Linux system built from scratch (with LFS) and integrates netfilter and iproute2, squid, squidGuard, apache, modSecurity, clamAV and multiple other open source products interfaced together as a whole to allow an easy and straightforward configuration using the CLI or the Web GUI. Please find more information about CacheGuard at https://www.cacheguard.com/.
+CacheGuard is based on a hardened Linux system built from scratch and integrates netfilter, iproute2, squid, squidGuard, apache, StrongSwan, modSecurity, clamAV and multiple other open source products interfaced together as a whole to allow an easy and straightforward configuration using the CLI or the Web GUI. Please find more information about CacheGuard at https://www.cacheguard.com/.
 
 You can download the bootable ISO CDROM image of the latest 64 bits version of CacheGuard-OS at https://sourceforge.net/projects/webgateway/.
+
+Please note that as CacheGuard is provided as an OS it is complicated to share its source code here but CacheGuard-OS is still an Open Source project. If you need to look at our code we suggest that you download the installation CDROM, install it on a machine and then see the code.
